# kbpaste

./: kbpaste.py  pyproject.toml
